<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"


        tools:context=".MainActivity">
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/menuLayout" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginBottom="8dp" android:layout_marginStart="1dp" android:layout_marginEnd="1dp"
            android:gravity="top" app:layout_constraintVertical_bias="0.009" android:layout_marginTop="8dp">
        <RadioGroup
                android:layout_width="49dp"
                android:layout_height="wrap_content" android:layout_weight="1" android:id="@+id/compAndUser">
            <RadioButton
                    android:text="@string/radioName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/user" android:layout_weight="1"/>
            <RadioButton
                    android:text="@string/radioName1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/computer" android:layout_weight="1"/>
            <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:layout_weight="1" android:id="@+id/levelComp">
                <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/easy" android:text="@string/easy"/>
                <RadioButton
                        android:text="@string/medium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/medium"/>
                <RadioButton
                        android:text="@string/hard"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/hard"/>
            </RadioGroup>
        </RadioGroup>
        <Button
                android:text="@string/textButtonGame"
                android:layout_width="wrap_content"
                android:layout_height="50dp" android:id="@+id/newGameButton" android:layout_weight="1"
        />
    </LinearLayout>
    <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="@id/menuLayout"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="32dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="56dp"
            android:id="@+id/mainWindow" android:layout_marginEnd="56dp"
            android:layout_marginTop="56dp">

        <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1"
                  android:background="#009688">
            <Button
                    style="android:attr/buttonBarButtonStyle"
                    android:id="@+id/button1"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:backgroundTint="#C2F4C4"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:padding="1dp"
                    android:textColor="#000000"
                    android:textSize="36sp"
                    android:textStyle="bold"/>
            <Button
                    style="android:attr/buttonBarButtonStyle"
                    android:id="@+id/button2"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:backgroundTint="#C2F4C4"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:padding="1dp"
                    android:textColor="#000000"
                    android:textSize="36sp"
                    android:textStyle="bold"/>
            <Button
                    style="android:attr/buttonBarButtonStyle"
                    android:id="@+id/button3"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:backgroundTint="#C2F4C4"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:padding="1dp"
                    android:textColor="#000000"
                    android:textSize="36sp"
                    android:textStyle="bold"/>
        </TableRow>
        <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1"
                  android:background="#009688">
            <Button
                    style="android:attr/buttonBarButtonStyle"
                    android:id="@+id/button4"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:backgroundTint="#C2F4C4"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:padding="1dp"
                    android:textColor="#000000"
                    android:textSize="36sp"
                    android:textStyle="bold"/>
            <Button
                    style="android:attr/buttonBarButtonStyle"
                    android:id="@+id/button5"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:backgroundTint="#C2F4C4"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:padding="1dp"
                    android:textColor="#000000"
                    android:textSize="36sp"
                    android:textStyle="bold"/>
            <Button
                    style="android:attr/buttonBarButtonStyle"
                    android:id="@+id/button6"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:backgroundTint="#C2F4C4"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:padding="1dp"
                    android:textColor="#000000"
                    android:textSize="36sp"
                    android:textStyle="bold"/>
        </TableRow>
        <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1"
                  android:background="#009688">
            <Button
                    style="android:attr/buttonBarButtonStyle"
                    android:id="@+id/button7"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:backgroundTint="#C2F4C4"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:padding="1dp"
                    android:textColor="#000000"
                    android:textSize="36sp"
                    android:textStyle="bold"/>
            <Button
                    style="android:attr/buttonBarButtonStyle"
                    android:id="@+id/button8"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:backgroundTint="#C2F4C4"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:padding="1dp"
                    android:textColor="#000000"
                    android:textSize="36sp"
                    android:textStyle="bold"/>
            <Button
                    style="android:attr/buttonBarButtonStyle"
                    android:id="@+id/button9"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:backgroundTint="#C2F4C4"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textColor="#000000"
                    android:textSize="36sp"
                    android:padding="1dp"
                    android:textStyle="bold"

            />
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>